# ParallelKDEpy

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  pyproject.toml  pytest.ini  testing_cuda_issue.ipynb
.github/workflows/: ci.yml  docs.yaml  docs.yml  release-pypi.yml  release-testpypi.yml
.parallekde_keys/: parallelkde_ci_key  parallelkde_ci_key.pub
docs/: conf.py  index.rst  usage.rst
docs/source/: api.md  conf.py  development.md  getting-started.md  index.md  installation.md
docs/source/_ext/: auto_examples.py
docs/source/_templates/: page.html  versioning.html
docs/source/scripts/: plot_kde.py
examples/: basic_usage.ipynb  basic_usage.py
src/: core.py
src/parallelkdepy/: __init__.py  core.py  juliapkg.json  wrapper.py
tests/: __init__.py  conftest.py  test_wrapper.py
