[tool.poetry]
name = "parallelkdepy"
version = "0.1.0"                                           # bump this on each release
description = "Python wrapper of ParallelKDE.jl"
authors = ["Christian Sustay <christian.sustay@tum.de>"]
license = "MIT"                                             # or whichever license you chose
readme = "README.md"
homepage = "https://github.com/chrissm23/ParallelKDEpy"
repository = "https://github.com/chrissm23/ParallelKDEpy"
documentation = "https://chrissm23.github.io/ParallelKDEpy" # optional
packages = [{ include = "parallelkdepy", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"   # minimum supported Python version
juliacall = "^0.9"
numpy = "^2.2"
# any other runtime deps here

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"

# [tool.poetry.scripts]
# parallelkde = "parallelkdepy.cli:main" # if you provide a console entry point (optional)

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
